5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1637_2704.log
== TEST (2019-04-09 10:53:45) 
-- CODE:


nota = float(input("Digite a nota: "))
bon = input("Digite se S ou N: ")

if(bon.upper() == "S")
	nota = nota + nota * 0.10

print(nota)
-- ERROR:
File "XXXX", line 6
    if(bon.upper() == "S")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:10) 
-- CODE:


nota = float(input("Digite a nota: "))
bon = input("Digite se S ou N: ")

if(bon.upper() == "S"):
	nota = nota + nota * 0.10

print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:54:23) 
-- CODE:


nota = float(input("Digite a nota: "))
bon = input("Digite se S ou N: ")

if(bon.upper() == "S"):
	nota = nota + nota * 0.10

print(nota)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:54:41) 
-- CODE:


nota = float(input("Digite a nota: "))
bon = input("Digite se S ou N: ")

if(bon.upper() == "S"):
	nota = nota + nota * 0.10

print(nota)
-- EXECUTION TIME:
0.192624
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
